<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.aliyun.openservices.tablestore</groupId>
		<artifactId>tablestore-for-agent-memory-parent</artifactId>
		<version>${revision}</version>
		<relativePath>../pom.xml</relativePath>
	</parent>

	<artifactId>tablestore-for-agent-memory-examples</artifactId>

	<properties>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<ai.djl.version>0.32.0</ai.djl.version>
	</properties>

	<dependencies>
		<!--suppress VulnerableLibrariesLocal -->
		<dependency>
			<groupId>com.aliyun.openservices.tablestore</groupId>
			<artifactId>tablestore-for-agent-memory</artifactId>
			<version>${project.version}</version>
		</dependency>

		<!--  开始：运行 Embedding 模型依赖   -->
		<dependency>
			<groupId>ai.djl</groupId>
			<artifactId>api</artifactId>
			<version>${ai.djl.version}</version>
		</dependency>
		<dependency>
			<groupId>ai.djl.huggingface</groupId>
			<artifactId>tokenizers</artifactId>
			<version>${ai.djl.version}</version>
		</dependency>
		<dependency>
			<groupId>ai.djl</groupId>
			<artifactId>model-zoo</artifactId>
			<version>${ai.djl.version}</version>
		</dependency>
		<dependency>
			<groupId>ai.djl.pytorch</groupId>
			<artifactId>pytorch-engine</artifactId>
			<version>${ai.djl.version}</version>
		</dependency>
		<dependency>
			<groupId>ai.djl.onnxruntime</groupId>
			<artifactId>onnxruntime-engine</artifactId>
			<version>${ai.djl.version}</version>
		</dependency>
		<!--  结束：运行 Embedding 模型依赖   -->

	</dependencies>

</project>
